--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
